--- a/i18n/docs/appstore_el.txt
+++ b/i18n/docs/appstore_el.txt
@@ -1,4 +1,4 @@
-Εξασφαλίστε τα Groestlcoin σας με τους δικούς σας όρους με ένα ανοιχτού κώδικα, πορτοφόλι πολλών υπογραφών από την BitPay.
+Εξασφαλίστε τα Groestlcoin σας με τους δικούς σας όρους με ένα ανοιχτού κώδικα, πορτοφόλι πολλών υπογραφών από την Groestlcoin Developers.
 Οι χρήστες GroestlPay μπορούν να κρατούν και να διαχειρίζονται κεφάλαια ατομικά ή να τα μοιράζονται με ασφάλεια με άλλους χρήστες με το πορτοφόλι πολλών υπογραφών, το οποίο εμποδίζει τις μη εξουσιοδοτημένες πληρωμές και απαιτεί πολλαπλές εγκρίσεις. Εδώ είναι μερικοί τρόποι με τους οποίους το GroestlPay μπορεί να χρησιμοποιηθεί σε συνδιασμό με άλλους ανθρώπους:
 
 Για να αποθηκεύσετε για τις διακοπές σας ή να κάνετε κοινές αγορές με τους φίλους σας
