--- a/i18n/docs/appstore_it.txt
+++ b/i18n/docs/appstore_it.txt
@@ -1,4 +1,4 @@
-Metti al sicuro i tuoi groestlcoins, alle tue condizioni, con un portafoglio open source e multifirma realizzato da BitPay.
+Metti al sicuro i tuoi groestlcoins, alle tue condizioni, con un portafoglio open source e multifirma realizzato da Groestlcoin Developers.
 Gli utenti GroestlPay possono gestire i propri fondi individualmente, o condividerli in maniera sicura con altri utenti grazie ai portafogli multifirma, che prevengono pagamenti non autorizzati richiedendo più approvazioni. Ecco alcuni modi per utilizzare GroestlPay con altre persone:
 
 Per rismarmiare soldi per le vacanze o per acquisti congiunti con gli amici
