--- a/i18n/docs/appstore_pl.txt
+++ b/i18n/docs/appstore_pl.txt
@@ -1,16 +1,16 @@
-Bezpieczne groestlcoiny na twoich własnych warunkach, z elektronicznym portfelem open source z multipodpisami od BitPay. 
+Bezpieczne groestlcoiny na twoich własnych warunkach, z elektronicznym portfelem open source z multipodpisami od Groestlcoin Developers. 
 Użytkownicy GroestlPay mogą posiadać fundusze indywidualnie lub bezpiecznie dzielić je z innymi użytkownikami w portfelach z multipodpisami, które uniemożliwiają nieautoryzowane płatności wymagając wielu potwierdzeń. Oto kilka sposobów, jak portfele GroestlPay mogą być używane w połączeniu z innymi użytkownikami:
 
-Oszczędzanie na wakacje lub wspólne zakupy z przyjaciółmi 
+Oszczędzanie na wakacje lub wspólne zakupy z przyjaciółmi
 Monitorowanie wydatków i dochodów rodzinnych
 Zarządzanie wydatkami firm, klubów lub organizacji
 
 Stworzyliśmy następujące funkcje portfela groestlcoin w tej wersji GroestlPay, które nie zagrażają bezpieczeństwu lub dostępności:
 
-Tworzenie i zarządzanie wieloma portfelami w aplikacji 
+Tworzenie i zarządzanie wieloma portfelami w aplikacji
 Intuicyjne bezpieczeństwo dzięki multipodpisom dla portfeli prywatnych i współdzielonych
 Proste zlecenia płatności dla współdzielonych portfeli i płatności grupowych
-Protokół HD (Hierarchical deterministic) do generowania adresów i kopii zapasowych portfela 
+Protokół HD (Hierarchical deterministic) do generowania adresów i kopii zapasowych portfela
 Zabezpieczenia: wszystkie klucze prywatne przechowywane lokalnie, a nie w chmurze
 Wsparcie dla Groestlcoin testnet wallets
 Jednoczesny dostęp ze wszystkich głównych platform mobilnych i stacjonarnych
@@ -20,4 +20,4 @@ Powiadomienia o płatnościach i transferach za pośrednictwem poczty elektronic
 Konfigurowanie nazwy i koloru tła portfela
 9 obsługiwanych języków (EN, CS, FR, DE, IT, ES, JA, PL, RU)
 
-GroestlPay jest bezpłatnym oprogramowaniem open source, które działa na niezastrzeżonych serwerach, nie jest zatem konieczne, aby opierać się na konkretnej firmie w celu jego dalszego wsparcia. Każdy ma możliwość sprawdzenia kodu źródłowego i zgłoszenia propozycji zmian w GroestlPay na GitHub (https://github.com/Groestlcoin/GroestlPay). 
+GroestlPay jest bezpłatnym oprogramowaniem open source, które działa na niezastrzeżonych serwerach, nie jest zatem konieczne, aby opierać się na konkretnej firmie w celu jego dalszego wsparcia. Każdy ma możliwość sprawdzenia kodu źródłowego i zgłoszenia propozycji zmian w GroestlPay na GitHub (https://github.com/Groestlcoin/GroestlPay).
