--- a/i18n/docs/appstore_ru.txt
+++ b/i18n/docs/appstore_ru.txt
@@ -1,4 +1,4 @@
-Обезопасьте биткойны на своих условиях кошельком от BitPay с открытым исходным кодом и мультиподписью.
+Обезопасьте биткойны на своих условиях кошельком от Groestlcoin Developers с открытым исходным кодом и мультиподписью.
 Пользователи GroestlPay могут хранить средства самостоятельно или безопасно управлять средствами совместно с помощью кошельков с мультиподписью, которые предотвращают несанкционированный платежи, требуя несколько одобрений. Вот некоторые способы того, как GroestlPay может быть использован совместно:
 
 Накопить на отпуск или совершать покупки вместе с друзьями
