--- a/i18n/po/el.po
+++ b/i18n/po/el.po
@@ -53,7 +53,7 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.m}}-του-{{item.n}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other groestlpayer has signed, or 2) 24 hours have passed since the proposal was created."
 msgstr "Μια πρόταση πληρωμής μπορεί να διαγραφεί εάν 1) είστε ο δημιουργός, και κανένας άλλος χρήστης του GroestlPay δεν έχει υπογράψει, ή 2) έχουν περάσει 24 ώρες απο την ώρα που η πρόταση δημιουργήθηκε."
 
 #: public/views/includes/terms.html
@@ -61,15 +61,15 @@ msgid "<b>IF YOU LOSE ACCESS TO YOUR GROESTLPAY WALLET OR YOUR ENCRYPTED PRIVATE
 msgstr "<b>ΕΑΝ ΧΑΣΕΤΕ ΤΗΝ ΠΡΟΣΒΑΣΗ ΝΑ ΣΑΣ ΣΤΟ ΠΟΡΤΟΦΌΛΙ GROESTLPAY Ή ΣΤΑ ΚΡΥΠΤΟΓΡΑΦΗΜΕΝΑ ΙΔΙΩΤΙΚΑ ΣΑΣ ΚΛΕΙΔΙΑ ΚΑΙ ΔΕΝ ΑΠΟΘΗΚΕΥΣΑΤΕ ΧΩΡΙΣΤΆ ΕΝΑ ΑΝΤΙΓΡΑΦΟ ΑΣΦΑΛΕΙΑΣ ΤΟΥ ΠΟΡΤΟΦΟΛΙΟΥ ΚΑΙ ΤΟΥ ΑΝΤΙΣΤΟΙΧΟΥ ΚΩΔΙΚΟΥ ΠΡΌΣΒΑΣΗΣ, ΑΠΟΔΕΧΕΣΤΕ ΚΑΙ ΣΥΜΦΩΝΕΙΤΕ ΟΤΙ ΟΠΟΙΑΔΗΠΟΤΕ ΠΟΣΟΤΗΤΑ GROESTLCOIN ΠΟΥ ΕΧΕΤΕ ΣΥΣΧΕΤΙΣΕΙ ΜΕ ΤΟ ΠΟΡΤΟΦΟΛΙ ΤΟΥ GROESTLPAY ΘΑ ΓΙΝΟΥΝ ΑΠΡΟΣΠΕΛΑΣΤΑ.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other groestlpayers)."
 msgstr ""
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> groestlpayers in the wallet"
 msgstr ""
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> groestlpayers in the wallet"
 msgstr ""
 
 #: public/views/disclaimer.html
@@ -388,19 +388,19 @@ msgid "Continue"
 msgstr "Συνεχίστε"
 
 #: src/js/services/bwcError.js
-msgid "copayer already in this wallet"
-msgstr "copayers ήδη σε αυτό το πορτοφόλι"
+msgid "groestlpayer already in this wallet"
+msgstr "groestlpayers ήδη σε αυτό το πορτοφόλι"
 
 #: src/js/services/bwcError.js
-msgid "copayer already voted on this spend proposal"
-msgstr "copayer που έχουν ήδη ψηφίσει αυτή την πρόταση"
+msgid "groestlpayer already voted on this spend proposal"
+msgstr "groestlpayer που έχουν ήδη ψηφίσει αυτή την πρόταση"
 
 #: src/js/services/bwcError.js
-msgid "copayer data mismatch"
-msgstr "Ασυμφωνία δεδομένων του copayer"
+msgid "groestlpayer data mismatch"
+msgstr "Ασυμφωνία δεδομένων του groestlpayer"
 
 #: public/views/preferencesInformation.html
-msgid "copayers"
+msgid "groestlpayers"
 msgstr "Μέλη του πορτοφολιού GroestlPay"
 
 #: src/js/controllers/copayers.js
@@ -1192,12 +1192,12 @@ msgid "Payment Proposal Rejected"
 msgstr "Πρόταση Πληρωμής Απορρίφθηκε"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by copayer"
-msgstr "Το copayer Απέρριψε την Πρόταση Πληρωμής"
+msgid "Payment Proposal Rejected by groestlpayer"
+msgstr "Το groestlpayer Απέρριψε την Πρόταση Πληρωμής"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by copayer"
-msgstr "Η Πρόταση Πληρωμής Υπογράφηκε από το copayer"
+msgid "Payment Proposal Signed by groestlpayer"
+msgstr "Η Πρόταση Πληρωμής Υπογράφηκε από το groestlpayer"
 
 #: public/views/walletHome.html
 msgid "Payment Proposals"
@@ -1536,8 +1536,8 @@ msgid "Share invitation"
 msgstr "Μοιραστείτε μια πρόσκληση"
 
 #: public/views/copayers.html
-msgid "Share this invitation with your copayers"
-msgstr "Μοιραστείτε αυτήν την πρόσκληση με άλλους copayers"
+msgid "Share this invitation with your groestlpayers"
+msgstr "Μοιραστείτε αυτήν την πρόσκληση με άλλους groestlpayers"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments"
@@ -1711,8 +1711,8 @@ msgid "This transaction has become invalid; possibly due to a double spend attem
 msgstr "Αυτή η συναλλαγή είναι άκυρη, πιθανόν λόγω μιας προσπάθειας διπλού ξοδέματος."
 
 #: public/views/walletHome.html
-msgid "This wallet is not registered at the given Bitcore Wallet Service (BWS). You can recreate it from the local information."
-msgstr "Το πορτοφόλι δεν έχει καταχωρηθεί στη Βάση Δεδομένων Πορτοφολιών Bitcore (BWS). Μπορείτε να την ξαναδημιουργήσετε από τις τοπικές πληροφορίες."
+msgid "This wallet is not registered at the given Groestlcore Wallet Service (GWS). You can recreate it from the local information."
+msgstr "Το πορτοφόλι δεν έχει καταχωρηθεί στη Βάση Δεδομένων Πορτοφολιών Groestlcore (GWS). Μπορείτε να την ξαναδημιουργήσετε από τις τοπικές πληροφορίες."
 
 #: public/views/modals/txp-details.html
 msgid "Time"
@@ -1742,7 +1742,7 @@ msgid "Total Locked Balance"
 msgstr "Συνολικό Κλειδωμένο Υπόλοιπο"
 
 #: public/views/create.html
-msgid "Total number of copayers"
+msgid "Total number of groestlpayers"
 msgstr ""
 
 #: src/js/services/fingerprintService.js
@@ -1820,8 +1820,8 @@ msgid "View"
 msgstr ""
 
 #: public/views/copayers.html
-msgid "Waiting for copayers"
-msgstr "Αναμονή για copayers"
+msgid "Waiting for groestlpayers"
+msgstr "Αναμονή για groestlpayers"
 
 #: src/js/services/onGoingProcess.js
 msgid "Waiting for Ledger..."
@@ -1970,8 +1970,8 @@ msgid "We reserve the right to modify this disclaimer from time to time."
 msgstr "Διατηρούμε το δικαίωμα να τροποποιήσουμε αυτή την αποποίηση ευθυνών από καιρό σε καιρό."
 
 #: public/views/disclaimer.html
-msgid "WELCOME TO COPAY"
-msgstr "ΚΑΛΩΣ ΗΛΘΑΤΕ ΣΤΟ COPAY"
+msgid "WELCOME TO GROESTLPAY"
+msgstr "ΚΑΛΩΣ ΗΛΘΑΤΕ ΣΤΟ GROESTLPAY"
 
 #: public/views/includes/terms.html
 msgid "While the software has undergone beta testing and continues to be improved by feedback from the open-source user and developer community, we cannot guarantee that there will be no bugs in the software."
@@ -2046,4 +2046,3 @@ msgstr ""
 #: public/views/backup.html
 msgid "Your wallet recovery phrase and access to the server that coordinated the initial wallet creation. You still need {{index.m}} keys to spend."
 msgstr ""
-
