--- a/i18n/po/fr.po
+++ b/i18n/po/fr.po
@@ -53,24 +53,24 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.m}}-sur-{{item.n}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
-msgstr "* Une proposition de paiement peut être supprimée si vous en êtes le créateur et qu'aucun des autres copayers n'a signé, ou si 24 heures sont passées depuis la création de la proposition."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other groestlpayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgstr "* Une proposition de paiement peut être supprimée si vous en êtes le créateur et qu'aucun des autres groestlpayers n'a signé, ou si 24 heures sont passées depuis la création de la proposition."
 
 #: public/views/includes/terms.html
 msgid "<b>IF YOU LOSE ACCESS TO YOUR GroestlPay WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY GROESTLCOINS YOU HAVE ASSOCIATED WITH THAT GroestlPay WALLET WILL BECOME INACCESSIBLE.</b>"
 msgstr "<b>SI VOUS PERDEZ L'ACCÈS À VOTRE PORTEFEUILLE GroestlPay OU À VOS CLÉS PRIVÉES CHIFFRÉES ET QUE VOUS N'AVEZ PAS ENTREPOSÉ SÉPARÉMENT UNE SAUVEGARDE DE VOTRE PORTEFEUILLE ET LES MOTS DE PASSE CORRESPONDANT, VOUS RECONNAISSEZ ET ACCEPTEZ QUE LES GROESTLCOINS QUE VOUS AVEZ ASSOCIÉ À CE PORTEFEUILLE GroestlPay DEVIENNENT INACCESSIBLES.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
-msgstr "<b>OU</b> 1 fichier d'exportation de portefeuille et le quorum restant en phrases de récupération de portefeuille (ex. dans un portefeuille 3-5 : 1 fichier d'exportation du portefeuille + 2 phrases de récupération du portefeuille de n'importe quels autres copayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other groestlpayers)."
+msgstr "<b>OU</b> 1 fichier d'exportation de portefeuille et le quorum restant en phrases de récupération de portefeuille (ex. dans un portefeuille 3-5 : 1 fichier d'exportation du portefeuille + 2 phrases de récupération du portefeuille de n'importe quels autres groestlpayers)."
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
-msgstr "<b>OU</b> la phrase de récupération de portefeuille de <b>tous</b> les copayers du portefeuille"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> groestlpayers in the wallet"
+msgstr "<b>OU</b> la phrase de récupération de portefeuille de <b>tous</b> les groestlpayers du portefeuille"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
-msgstr "<b>OU</b> les phrases de récupération de portefeuille de <b>tous</b> les copayers du portefeuille"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> groestlpayers in the wallet"
+msgstr "<b>OU</b> les phrases de récupération de portefeuille de <b>tous</b> les groestlpayers du portefeuille"
 
 #: public/views/disclaimer.html
 msgid "A multisignature groestlcoin wallet"
@@ -388,20 +388,20 @@ msgid "Continue"
 msgstr "Continuer"
 
 #: src/js/services/bwcError.js
-msgid "copayer already in this wallet"
-msgstr "GroestlPayer déjà dans ce portefeuille"
+msgid "groestlpayer already in this wallet"
+msgstr "groestlpayer déjà dans ce portefeuille"
 
 #: src/js/services/bwcError.js
-msgid "copayer already voted on this spend proposal"
-msgstr "Le GroestlPayer a déjà voté pour cette proposition de dépense"
+msgid "groestlpayer already voted on this spend proposal"
+msgstr "Le groestlpayer a déjà voté pour cette proposition de dépense"
 
 #: src/js/services/bwcError.js
-msgid "copayer data mismatch"
-msgstr "Les données GroestlPayer ne correspondent pas"
+msgid "groestlpayer data mismatch"
+msgstr "Les données groestlpayer ne correspondent pas"
 
 #: public/views/preferencesInformation.html
-msgid "copayers"
-msgstr "GroestlPayers"
+msgid "groestlpayers"
+msgstr "groestlpayers"
 
 #: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
@@ -1192,12 +1192,12 @@ msgid "Payment Proposal Rejected"
 msgstr "Proposition de paiement rejetée"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by copayer"
-msgstr "Proposition de paiement rejetée par les GroestlPayer"
+msgid "Payment Proposal Rejected by groestlpayer"
+msgstr "Proposition de paiement rejetée par les groestlpayer"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by copayer"
-msgstr "Proposition de paiement signée par les GroestlPayers"
+msgid "Payment Proposal Signed by groestlpayer"
+msgstr "Proposition de paiement signée par les groestlpayers"
 
 #: public/views/walletHome.html
 msgid "Payment Proposals"
@@ -1536,8 +1536,8 @@ msgid "Share invitation"
 msgstr "Partager l'invitation"
 
 #: public/views/copayers.html
-msgid "Share this invitation with your copayers"
-msgstr "Partagez cette invitation avec vos copayers"
+msgid "Share this invitation with your groestlpayers"
+msgstr "Partagez cette invitation avec vos groestlpayers"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments"
@@ -1711,8 +1711,8 @@ msgid "This transaction has become invalid; possibly due to a double spend attem
 msgstr "Cette transaction est devenue invalide ; il s'agit peut-être d'une tentative de double dépense."
 
 #: public/views/walletHome.html
-msgid "This wallet is not registered at the given Bitcore Wallet Service (BWS). You can recreate it from the local information."
-msgstr "Ce portefeuille n'est pas enregistré dans le Bitcore Wallet Service (BWS) donné. Vous pouvez le recréer depuis l'information locale."
+msgid "This wallet is not registered at the given Groestlcore Wallet Service (GWS). You can recreate it from the local information."
+msgstr "Ce portefeuille n'est pas enregistré dans le Groestlcore Wallet Service (GWS) donné. Vous pouvez le recréer depuis l'information locale."
 
 #: public/views/modals/txp-details.html
 msgid "Time"
@@ -1742,8 +1742,8 @@ msgid "Total Locked Balance"
 msgstr "Solde verrouillé total"
 
 #: public/views/create.html
-msgid "Total number of copayers"
-msgstr "Nombre total de copayers"
+msgid "Total number of groestlpayers"
+msgstr "Nombre total de groestlpayers"
 
 #: src/js/services/fingerprintService.js
 msgid "Touch ID Failed"
@@ -1820,8 +1820,8 @@ msgid "View"
 msgstr "Voir"
 
 #: public/views/copayers.html
-msgid "Waiting for copayers"
-msgstr "Attente des copayers"
+msgid "Waiting for groestlpayers"
+msgstr "Attente des groestlpayers"
 
 #: src/js/services/onGoingProcess.js
 msgid "Waiting for Ledger..."
@@ -1970,8 +1970,8 @@ msgid "We reserve the right to modify this disclaimer from time to time."
 msgstr "Nous nous réservons le droit de modifier cette clause de non-responsabilité de temps à autre."
 
 #: public/views/disclaimer.html
-msgid "WELCOME TO COPAY"
-msgstr "BIENVENUE SUR COPAY"
+msgid "WELCOME TO GROESTLPAY"
+msgstr "BIENVENUE SUR GROESTLPAY"
 
 #: public/views/includes/terms.html
 msgid "While the software has undergone beta testing and continues to be improved by feedback from the open-source user and developer community, we cannot guarantee that there will be no bugs in the software."
@@ -2046,4 +2046,3 @@ msgstr "La clé de votre portefeuille sera chiffrée. Le code de dépenses ne pe
 #: public/views/backup.html
 msgid "Your wallet recovery phrase and access to the server that coordinated the initial wallet creation. You still need {{index.m}} keys to spend."
 msgstr "Votre phrase de récupération du portefeuille et l'accès au serveur qui a coordonné la création du portefeuille initial. Vous avez encore besoin de {{index.m}} clés pour dépenser."
-
