--- a/i18n/po/pl.po
+++ b/i18n/po/pl.po
@@ -53,7 +53,7 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.m}}-z-{{item.n}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other groestlpayer has signed, or 2) 24 hours have passed since the proposal was created."
 msgstr "* Wniosek wypłaty może być usunięty jeśli: 1) Po utworzeniu nie zatwierdził go żaden inny współwłaściciel portfela lub 2) minęły 24 godziny od kiedy wniosek został utworzony."
 
 #: public/views/includes/terms.html
@@ -61,15 +61,15 @@ msgid "<b>IF YOU LOSE ACCESS TO YOUR GroestlPay WALLET OR YOUR ENCRYPTED PRIVATE
 msgstr "<b>JEŚLI UŻYTKOWNIK STRACI DOSTĘP DO PORTFELA GroestlPay LUB ZASZYFROWANYCH KLUCZY PRYWATNYCH, A NIE MA ZAPISANEJ KOPII ZAPASOWEJ PORTFELA I HASŁA, PRZYJMUJE DO WIADOMOŚCI, ŻE JAKIEKOLWIEK POSIADANE GROESTLCOINY ZWIĄZANE Z TYM PORTFELEM GroestlPay BĘDĄ NIEDOSTĘPNE.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other groestlpayers)."
 msgstr "<b>LUB</b> 1 plik eksportu portfela i reszta wymaganych fraz odzyskiwania portfela (np. w portfelu 3-5: 1 plik eksportu portfela + 2 frazy odzyskiwania któregokolwiek z pozostałych współwłaścicieli portfela)."
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> groestlpayers in the wallet"
 msgstr "<b>LUB</b> frazy odzyskiwania <b>wszystkich</b> współwłaścicieli portfela"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> groestlpayers in the wallet"
 msgstr "<b>LUB</b> fraz odzyskiwania <b>wszystkich</b> współwłaścicieli portfela"
 
 #: public/views/disclaimer.html
@@ -388,19 +388,19 @@ msgid "Continue"
 msgstr "Dalej"
 
 #: src/js/services/bwcError.js
-msgid "copayer already in this wallet"
+msgid "groestlpayer already in this wallet"
 msgstr "Użytkownik jest już w tym portfelu"
 
 #: src/js/services/bwcError.js
-msgid "copayer already voted on this spend proposal"
+msgid "groestlpayer already voted on this spend proposal"
 msgstr "Użytkownik głosował już za tym wnioskiem wypłaty"
 
 #: src/js/services/bwcError.js
-msgid "copayer data mismatch"
+msgid "groestlpayer data mismatch"
 msgstr "Niezgodność danych współwłaściciela portfela"
 
 #: public/views/preferencesInformation.html
-msgid "copayers"
+msgid "groestlpayers"
 msgstr "Współwłaściciele portfela"
 
 #: src/js/controllers/copayers.js
@@ -1192,11 +1192,11 @@ msgid "Payment Proposal Rejected"
 msgstr "Wniosek wypłaty odrzucony"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by copayer"
+msgid "Payment Proposal Rejected by groestlpayer"
 msgstr "Wniosek wypłaty odrzucony przez współwłaściciela portfela"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by copayer"
+msgid "Payment Proposal Signed by groestlpayer"
 msgstr "Wniosek wypłaty zatwierdzony przez współwłaściciela portfela"
 
 #: public/views/walletHome.html
@@ -1536,7 +1536,7 @@ msgid "Share invitation"
 msgstr "Wyślij zaproszenie"
 
 #: public/views/copayers.html
-msgid "Share this invitation with your copayers"
+msgid "Share this invitation with your groestlpayers"
 msgstr "Wyślij zaproszenie współwłaścicielom portfela"
 
 #: public/views/walletHome.html
@@ -1711,8 +1711,8 @@ msgid "This transaction has become invalid; possibly due to a double spend attem
 msgstr "Ta transakcja jest nieprawidłowa. Może to być spowodowane próbą podwójnej płatności."
 
 #: public/views/walletHome.html
-msgid "This wallet is not registered at the given Bitcore Wallet Service (BWS). You can recreate it from the local information."
-msgstr "Ten portfel nie jest zarejestrowany na Bitcore Wallet Service (BWS). Możesz go odtworzyć z lokalnego nośnika."
+msgid "This wallet is not registered at the given Groestlcore Wallet Service (GWS). You can recreate it from the local information."
+msgstr "Ten portfel nie jest zarejestrowany na Groestlcore Wallet Service (GWS). Możesz go odtworzyć z lokalnego nośnika."
 
 #: public/views/modals/txp-details.html
 msgid "Time"
@@ -1742,7 +1742,7 @@ msgid "Total Locked Balance"
 msgstr "Łącznie zablokowane środki"
 
 #: public/views/create.html
-msgid "Total number of copayers"
+msgid "Total number of groestlpayers"
 msgstr "Liczba współwłaścicieli portfela"
 
 #: src/js/services/fingerprintService.js
@@ -1820,7 +1820,7 @@ msgid "View"
 msgstr "Widok"
 
 #: public/views/copayers.html
-msgid "Waiting for copayers"
+msgid "Waiting for groestlpayers"
 msgstr "Oczekiwanie na współwłaścicieli portfela"
 
 #: src/js/services/onGoingProcess.js
@@ -1970,8 +1970,8 @@ msgid "We reserve the right to modify this disclaimer from time to time."
 msgstr "Zastrzegamy sobie prawo do wprowadzania zmian w niniejszych warunkach użytkowania."
 
 #: public/views/disclaimer.html
-msgid "WELCOME TO COPAY"
-msgstr "WITAMY W COPAY"
+msgid "WELCOME TO GROESTLPAY"
+msgstr "WITAMY W GROESTLPAY"
 
 #: public/views/includes/terms.html
 msgid "While the software has undergone beta testing and continues to be improved by feedback from the open-source user and developer community, we cannot guarantee that there will be no bugs in the software."
@@ -2046,4 +2046,3 @@ msgstr "Klucz portfela będzie zaszyfrowany. Hasło wypłat nie może być odzys
 #: public/views/backup.html
 msgid "Your wallet recovery phrase and access to the server that coordinated the initial wallet creation. You still need {{index.m}} keys to spend."
 msgstr "Twoja fraza odzyskiwania i dostęp do serwera koordynowały tworzenie początkowego portfela. Musisz jeszcze {{index.m}} w celu dokonania płatności."
-
