--- a/i18n/po/zh.po
+++ b/i18n/po/zh.po
@@ -53,24 +53,24 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.n}} 分之 {{item.m}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
-msgstr "* 如果 1) 你是创造者，及没有其他 copayer 签名，或 2) 24 小时已经过去，支付提议将被删除。"
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other groestlpayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgstr "* 如果 1) 你是创造者，及没有其他 groestlpayer 签名，或 2) 24 小时已经过去，支付提议将被删除。"
 
 #: public/views/includes/terms.html
 msgid "<b>IF YOU LOSE ACCESS TO YOUR GroestlPay WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY GROESTLCOINS YOU HAVE ASSOCIATED WITH THAT GroestlPay WALLET WILL BECOME INACCESSIBLE.</b>"
 msgstr "<b>如果你无法访问你的 GroestlPay 钱包或加密私钥，及你没有分开储存钱包备份和相应密码，你承认并同意有关 GroestlPay 钱包里的任何闪电币将不可被存取。</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
-msgstr "<b>或</b> 1 钱包导出文件和钱包恢复短语的剩余法定人数 (例如在 3-5 钱包︰1 钱包导出文件 + 任何其他 copayers 的 2 钱包恢复短语)。"
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other groestlpayers)."
+msgstr "<b>或</b> 1 钱包导出文件和钱包恢复短语的剩余法定人数 (例如在 3-5 钱包︰1 钱包导出文件 + 任何其他 groestlpayers 的 2 钱包恢复短语)。"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
-msgstr "<b>或</b> 钱包里的 <b>所有</b> copayers 的钱包恢复短语"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> groestlpayers in the wallet"
+msgstr "<b>或</b> 钱包里的 <b>所有</b> groestlpayers 的钱包恢复短语"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
-msgstr "<b>或</b> 钱包里的 <b>所有</b> copayers 的钱包恢复短语"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> groestlpayers in the wallet"
+msgstr "<b>或</b> 钱包里的 <b>所有</b> groestlpayers 的钱包恢复短语"
 
 #: public/views/disclaimer.html
 msgid "A multisignature groestlcoin wallet"
@@ -388,20 +388,20 @@ msgid "Continue"
 msgstr "继续"
 
 #: src/js/services/bwcError.js
-msgid "copayer already in this wallet"
-msgstr "copayer 已经在这个钱包里"
+msgid "groestlpayer already in this wallet"
+msgstr "groestlpayer 已经在这个钱包里"
 
 #: src/js/services/bwcError.js
-msgid "copayer already voted on this spend proposal"
-msgstr "copayer 已经表决此花费提议"
+msgid "groestlpayer already voted on this spend proposal"
+msgstr "groestlpayer 已经表决此花费提议"
 
 #: src/js/services/bwcError.js
-msgid "copayer data mismatch"
-msgstr "copayer 的数据不匹配"
+msgid "groestlpayer data mismatch"
+msgstr "groestlpayer 的数据不匹配"
 
 #: public/views/preferencesInformation.html
-msgid "copayers"
-msgstr "copayers"
+msgid "groestlpayers"
+msgstr "groestlpayers"
 
 #: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
@@ -1192,12 +1192,12 @@ msgid "Payment Proposal Rejected"
 msgstr "支付提议已被拒绝"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by copayer"
-msgstr "支付提议已被 copayer 拒绝"
+msgid "Payment Proposal Rejected by groestlpayer"
+msgstr "支付提议已被 groestlpayer 拒绝"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by copayer"
-msgstr "支付提议已获 copayer 签名"
+msgid "Payment Proposal Signed by groestlpayer"
+msgstr "支付提议已获 groestlpayer 签名"
 
 #: public/views/walletHome.html
 msgid "Payment Proposals"
@@ -1536,8 +1536,8 @@ msgid "Share invitation"
 msgstr "共享邀请"
 
 #: public/views/copayers.html
-msgid "Share this invitation with your copayers"
-msgstr "将此邀请与你的 copayers 共享"
+msgid "Share this invitation with your groestlpayers"
+msgstr "将此邀请与你的 groestlpayers 共享"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments"
@@ -1711,8 +1711,8 @@ msgid "This transaction has become invalid; possibly due to a double spend attem
 msgstr "此交易已无效; 可能是双花尝试导致。"
 
 #: public/views/walletHome.html
-msgid "This wallet is not registered at the given Bitcore Wallet Service (BWS). You can recreate it from the local information."
-msgstr "此钱包不在给定的 Bitcore Wallet Service (BWS) 注册。你可以从本地信息重新创建它。"
+msgid "This wallet is not registered at the given Groestlcore Wallet Service (GWS). You can recreate it from the local information."
+msgstr "此钱包不在给定的 Groestlcore Wallet Service (GWS) 注册。你可以从本地信息重新创建它。"
 
 #: public/views/modals/txp-details.html
 msgid "Time"
@@ -1742,8 +1742,8 @@ msgid "Total Locked Balance"
 msgstr "锁定结余的总额"
 
 #: public/views/create.html
-msgid "Total number of copayers"
-msgstr "copayers 的总数"
+msgid "Total number of groestlpayers"
+msgstr "groestlpayers 的总数"
 
 #: src/js/services/fingerprintService.js
 msgid "Touch ID Failed"
@@ -1820,8 +1820,8 @@ msgid "View"
 msgstr "查看"
 
 #: public/views/copayers.html
-msgid "Waiting for copayers"
-msgstr "正在等待 copayers"
+msgid "Waiting for groestlpayers"
+msgstr "正在等待 groestlpayers"
 
 #: src/js/services/onGoingProcess.js
 msgid "Waiting for Ledger..."
@@ -1970,8 +1970,8 @@ msgid "We reserve the right to modify this disclaimer from time to time."
 msgstr "我们保留权利以修改此免责声明。"
 
 #: public/views/disclaimer.html
-msgid "WELCOME TO COPAY"
-msgstr "欢迎使用 COPAY"
+msgid "WELCOME TO GROESTLPAY"
+msgstr "欢迎使用 GROESTLPAY"
 
 #: public/views/includes/terms.html
 msgid "While the software has undergone beta testing and continues to be improved by feedback from the open-source user and developer community, we cannot guarantee that there will be no bugs in the software."
@@ -2046,4 +2046,3 @@ msgstr "你的钱包钥匙将被加密。支付密码不能恢复。必须把它
 #: public/views/backup.html
 msgid "Your wallet recovery phrase and access to the server that coordinated the initial wallet creation. You still need {{index.m}} keys to spend."
 msgstr "你的钱包恢复短语及访问协调初始钱包创建的服务器。你仍然需要 {{index.m}} 钥匙来支付。"
-
